# sys-kaleido

./: Cargo.toml  README.md  install.ps1  install.sh  kaleido.toml
.github/workflows/: rust.yml
src/: main.rs
src/action/: bindle.rs  config.rs  helper.rs  list.rs  mod.rs  search.rs  uninstall.rs  upgrade.rs
src/action/installer/: execute.rs  install.rs  mod.rs  rust_bin_installer.rs  rust_src_installer.rs
src/tool/: args.rs  fs.rs  global_input.rs  http.rs  kaleido.rs  logger.rs  mod.rs
