[package]
name = "sys-kaleido"
version = "0.1.0-alpha.2"
edition = "2021"
categories = ["command-line-interface"]
keywords = ["tools", "kaleido"]
license = "MIT"
description = "sys-kaleido provides one-stop management for some new opensource system tools, such as ls, rm, cp .etc."
repository = "https://github.com/jinyuli/sys-kaleido"
readme = "README.md"

[dependencies]
argh = "0.1.12"
colored = "2.1.0"
directories = "5.0.1"
flate2 = "1.0.28"
futures-util = "0.3.30"
indicatif = "0.17.8"
log = "0.4.20"
log4rs = "1.3.0"
md-5 = "0.10.6"
octocrab = "0.34.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = [ "stream" ]}
self_update = "0.39.0"
serde = "1.0.196"
sevenz-rust = "0.5.4"
sha2 = "0.10.8"
tar = "0.4.40"
thiserror = "1.0.57"
tokio = { version="1.36.0", features = ["full"] }
toml = "0.8.10"
zip = "0.6.6"
